--- a/_attachments/index.html
+++ b/_attachments/index.html
@@ -8,7 +8,7 @@
 
         <script src="js/jquery.min.js"></script>
         <script src="js/jquery-ui.min.js"></script>
-        <script src="js/mithril.js"></script>
+        <script src="js/html.js"></script>
         <script src="js/pouchdb.min.js"></script>
 
         <link rel="stylesheet" href="css/jquery-ui.min.css">
@@ -24,15 +24,14 @@
                 Components:
                 <li> <a href="http://jquery.com/">jQuery</a> </li>
                 <li> <a href="http://jqueryui.com/">jQuery UI</a> </li>
-                <li> <a href="http://jquerymy.com/">jquerymy.js</a></li>
-                <li> <a href="http://mithriljs.org/">mithril.js</a></li>
+                <li> <a href="http://pouchdb.com/">PouchDB</a></li>
             </ul>
         </p>
 
         <div id="mainContent"></div>
 
-        <script src="model/user.js"></script>
-        <script src="view/userList.js"></script>
+        <footer id="#footer"></footer>
+
         <script src="js/app.js"></script>
     </body>
 </html>
